// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiPopover anchorPosition defaults to center 1`] = `
<div
  class="kuiPopover"
>
  <button />
</div>
`;

exports[`KuiPopover anchorPosition left is rendered 1`] = `
<div
  class="kuiPopover kuiPopover--anchorLeft"
>
  <button />
</div>
`;

exports[`KuiPopover anchorPosition right is rendered 1`] = `
<div
  class="kuiPopover kuiPopover--anchorRight"
>
  <button />
</div>
`;

exports[`KuiPopover children is rendered 1`] = `
<div
  class="kuiPopover"
>
  <button />
</div>
`;

exports[`KuiPopover is rendered 1`] = `
<div
  aria-label="aria-label"
  class="kuiPopover testClass1 testClass2"
  data-test-subj="test subject string"
>
  <button />
</div>
`;

exports[`KuiPopover isOpen defaults to false 1`] = `
<div
  class="kuiPopover"
>
  <button />
</div>
`;

exports[`KuiPopover isOpen renders true 1`] = `
<div
  class="kuiPopover"
>
  <button />
  <div>
    <div
      class="kuiPanel kuiPanel--paddingMedium kuiPanel--shadow kuiPopover__panel"
    />
  </div>
</div>
`;
